--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
+/* 
+font-family: 'Open Sans', sans-serif;
+font-family: 'Montserrat', sans-serif;
+*/
+
+body {
+  /* font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.42;  */
+  font: normal 16px/1.42 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased; /* сглаживание */
+  -moz-osx-font-smoothing: grayscale; /* сглаживание */
+}
+
 ul {
   list-style-type: none;
 }
