--- a/css/main.css
+++ b/css/main.css
@@ -27,30 +27,124 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.42;  */
-  font: normal 16px/1.42 'Open Sans', sans-serif;
-  -webkit-font-smoothing: antialiased; /* сглаживание */
-  -moz-osx-font-smoothing: grayscale; /* сглаживание */
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.contacts {
-  font-style: normal
-}
-
-ul {
-  list-style-type: none;
-}
-
-li {
-  display: inline-block;
+    /* сглаживание */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: normal 16px/1.42 'Open Sans', Helvetica, sans-serif;
+  color: #fff;
+  background: #29292c;
+  /* background: url(../images/bg/lion-header.jpg) no-repeat top center #29292c; */
 }
 
 a {
-  text-decoration: none;
-  background: #ccc;
+  color: inherit; /*будет наследоваться от родительского блока*/
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+ }
+
+ ul li {
+   list-style: none;
+ }
+
+ h1, h2, h3, h4, h5, h6 {
+   margin: 0;
+   font-weight: normal;
+ }
+
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
+}
+
+.header {
+  height: 120px;
+  position: relative;
+  margin-bottom: 150px;
+}
+
+.header .logo { /*тут не нужен селектор хэдэра*/
+  display: block; /*т.к. в ссылке лежит блочный элемент img*/
+  position: absolute;
+  top: 57px;
+  left: 0;
+}
+
+.header .menu { /*тут не нужен селектор хэдэра*/
+  position: absolute;
+  top: 60px;
+  left: 250px;
+}
+
+.header .contacts { /*тут не нужен селектор хэдэра*/
+  position: absolute;
+  top: 48px;
+  right: 0;
+}
+
+.menu__item { 
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 50px;
+}
+
+.menu__link {
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.menu__link:hover {
+  color: #dfb56d;
+}
+
+.contacts {
+  font-style: normal;
+  text-align: right;
+}
+
+.contacts__phone {
+  text-decoration: none;
+  font-size: 26px;
+  margin-bottom: 4px;
+}
+
+.contacts__dropdown-title {
+  font-size: 13px;
+  text-decoration: underline;
+  color: #dfb56d;
+}
+
+.hero__text-section {
+  width: 400px;
+}
+
+.hero__title {
+  font-size: 48px;
+  font-weight: bold;
+  line-height: 1.1em;
+  margin-bottom: 18px;
+}
+
+.hero__subtitle {
+  font-size: 18px;
+  color: #dfb56d;
+  margin-bottom: 45px;
+}
+
+.button {
+  background: #dfb56d;
+  border-radius: 4px;
+  padding: 18px 39px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.button:hover {
+  background: #d3a556;
+  /*<сдвиг по x> <сдвиг по y> <радиус размытия> <растяжение> <цвет>*/
+  box-shadow: 0 0 25px 0 rgba(223, 181, 108, .15);
+}
