--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Open Sans';
   src: url('/fonts/opensans-bold-webfont.woff2') format('woff2'),
-       url('/fonts/opensans-bold-webfont.woff') format('woff');
+    url('/fonts/opensans-bold-webfont.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'Open Sans';
   src: url('/fonts/opensans-regular-webfont.woff2') format('woff2'),
-       url('/fonts/opensans-regular-webfont.woff') format('woff');
+    url('/fonts/opensans-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,10 +17,14 @@
 @font-face {
   font-family: 'Open Sans';
   src: url('/fonts/opensans-semibold-webfont.woff2') format('woff2'),
-       url('/fonts/opensans-semibold-webfont.woff') format('woff');
+    url('/fonts/opensans-semibold-webfont.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
+
+/* html {
+  background: url(../images/bg/bottom-pic.png) no-repeat bottom right;
+} */
 
 body {
   /* font-family: 'Open Sans', sans-serif;
@@ -52,6 +56,10 @@ ul {
  h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-weight: normal;
+ }
+
+ * {
+   box-sizing: border-box; /*меняет алгоритм расчета ширины и высоты элемента, теперь включает поля и границы, но не отступы*/
  }
 
 .container {
@@ -125,6 +133,7 @@ ul {
 
 .hero__text-section {
   width: 400px;
+  margin-bottom: 175px; /*не было в видео*/
 }
 
 .hero__title {
@@ -157,4 +166,79 @@ ul {
   background: #d3a556;
   /*<сдвиг по x> <сдвиг по y> <радиус размытия> <растяжение> <цвет>*/
   box-shadow: 0 0 25px 0 rgba(223, 181, 108, .15);
+}
+
+.section {
+  margin-bottom: 138px;
+}
+
+.section__title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 45px;
+}
+
+.offers__item {
+  min-height: 470px;
+  border-radius: 4px;
+  background: #fff;
+  display: inline-block;
+  margin-right: 22px; /*чтобы вмещались в контейнер*/
+  width: 362px;
+  color: #010001;
+}
+
+.offers__item:last-child {
+  margin-right: 0;
+}
+
+.offers__header {
+  min-height: 162px;
+  margin-bottom: 28px;
+  position: relative;
+}
+
+.offers__header-img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -44px; /*это корректно? почему так получилось?*/
+  margin-right: -32px;
+}
+
+.offers__content {
+  padding: 36px 30px;
+}
+
+.offers__title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.offers__prices-cell {
+  display: inline-block;
+  vertical-align: top;
+  width: 115px;
+  margin-right: 30px;
+}
+
+.offers__prices-cell:last-child {
+  margin-right: 0;
+}
+
+.offers__price {
+  font-size: 36px;
+}
+
+.offers__price-desc {
+  color: #333;
+}
+
+.offers__prices {
+  margin-bottom: 50px;
+}
+
+.offers__btn-wrapper {
+  text-align: center;
 }
