--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ ul {
 }
 
 .section {
-  margin-bottom: 138px;
+  margin-bottom: 125px;
 }
 
 .section__title {
@@ -299,7 +299,7 @@ ul {
   position: relative;
   border-radius: 4px;
   overflow: hidden;
-  margin-right: 20px; /*не было в видео*/
+  margin-right: 25px; /*не было в видео*/
 }
 
 .news__item:last-child { /*не было в видео*/
@@ -326,7 +326,6 @@ ul {
 .news__date {
   font-size: 14px;
   margin-bottom: 18px;
-  display: block;
 }
 
 .news__title {
@@ -336,8 +335,8 @@ ul {
 }
 
 .news__desc { /* не было в видео*/
-  margin: 0;
-  min-height: 44px; 
+  max-width: 444px; /*для PP*/
+  min-height: 44px; /*для PP*/
 }
 
 .paginator {
