--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
   font: normal 16px/1.42 'Open Sans', Helvetica, sans-serif;
   color: #fff;
   background: #29292c;
+  /* margin: 0; */
   /* background: url(../images/bg/lion-header.jpg) no-repeat top center #29292c; */
 }
 
@@ -56,6 +57,10 @@ ul {
  h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-weight: normal;
+ }
+
+ p {
+   margin-top: 0;
  }
 
  * {
@@ -325,7 +330,7 @@ ul {
 
 .news__date {
   font-size: 14px;
-  margin-bottom: 18px;
+  margin-bottom: 23px;
 }
 
 .news__title {
@@ -369,3 +374,45 @@ ul {
 .paginator__link:hover {
   background: #353538;
 }
+
+.about:before, .about__desc {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.about:before {
+  content: "";  
+  width: 488px;
+  height: 502px;
+  background: url("../images/decor/chess.jpg") no-repeat center center / cover;
+  border-radius: 4px;
+}
+
+.about__desc {
+  background: #202123;
+  padding: 80px 98px;
+  width: 780px;
+  margin-left: -142px;
+  margin-top: 166px;
+  border-radius: 4px;
+  min-height: 454px;
+}
+
+.about__title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.about__desc-text {
+  margin-bottom: 42px;
+}
+
+.about__desc-text p {
+  margin-bottom: 20px;
+}
+
+.about__desc-text p:last-child { /*т.к. есть отступ от всей секции*/
+  margin-bottom: 0;
+}
+
