--- a/css/main.css
+++ b/css/main.css
@@ -299,8 +299,7 @@ ul {
 
 .offers__price-desc {
   color: #333;
-  letter-spacing: -0.03em; /*стоит добавлять для PP или нет?*/
-  line-height: 1.3em; /*стоит добавлять для PP или нет?*/
+  line-height: 21px; /*стоит добавлять для PP или нет?*/
 }
 
 .offers__prices {
