Заменена картинка в About на .jpg

--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,7 @@ ul {
   content: "";  
   width: 488px;
   height: 502px;
-  background: url("../images/decor/chess-layout.png") no-repeat center center / cover;
+  background: url("../images/decor/chess-layout.jpg") no-repeat center center / cover;
   border-radius: 4px;
 }
 
