--- a/css/blocks/logo.css
+++ b/css/blocks/logo.css
@@ -1,7 +1,4 @@
 .logo {
   display: block;
-  /*т.к. в ссылке лежит блочный элемент img*/
-  position: absolute;
-  top: 35px;
-  left: 0;
+  margin-right: 100px;
 }
