Неделя 3. Флексы в hero
Снова обернула в hero шапку и первый блок.

--- a/css/blocks/hero.css
+++ b/css/blocks/hero.css
@@ -1,8 +1,15 @@
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 600px;
+}
+
 .hero {
   margin-bottom: 168px;
 }
 
-.hero__content {
+.hero__text-content {
   width: 38%;
 }
 
