--- a/css/blocks/menu.css
+++ b/css/blocks/menu.css
@@ -1,10 +1,12 @@
 /* .menu {
   
 } */
+.menu__list {
+  display: flex;
+  justify-content: space-between;
+}
 
 .menu__item {
-  display: inline-block;
-  vertical-align: middle;
   margin-right: 53px;
 }
 
