--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,11 @@
 @import url("./blocks/menu.css");
 @import url("./blocks/contacts.css");
 @import url("./blocks/hero.css");
+@import url("./blocks/pageline.css");
 @import url("./blocks/btn.css");
 @import url("./blocks/section.css");
 @import url("./blocks/offers.css");
+@import url("./blocks/offer.css");
 @import url("./blocks/news.css");
 @import url("./blocks/paginator.css");
 @import url("./blocks/about.css");
