--- a/css/blocks/offer.css
+++ b/css/blocks/offer.css
@@ -5,6 +5,8 @@
   color: #010001;
   overflow: hidden;
   box-shadow: 0 0 27px 0 rgba(0, 0, 0, .2);
+  display: flex;
+  flex-direction: column;
 }
 
 .offer__header {
@@ -48,6 +50,9 @@
 .offer__content {
   padding: 36px 30px;
   padding-top: 25px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .offer__title {
@@ -56,11 +61,14 @@
   margin-bottom: 18px;
 }
 
+.offer__prices {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .offer__prices-cell {
-  display: inline-block;
-  vertical-align: top;
-  width: 137px;
-  margin-right: 8px;
+  margin-right: 25px; 
 }
 
 .offer__prices-cell:last-child {
@@ -81,10 +89,8 @@
   /*добавила для PP*/
 }
 
-.offer__prices {
-  margin-bottom: 50px;
-}
-
 .offer__btn-wrapper {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
 }
