--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 @import url("./blocks/offers.css");
 @import url("./blocks/offer.css");
 @import url("./blocks/news.css");
+@import url("./blocks/single-news.css");
 @import url("./blocks/paginator.css");
 @import url("./blocks/about.css");
 @import url("./blocks/footer.css");
