--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -58,8 +58,8 @@ table { /*чтобы границы ячеек сливались*/
 }
 
 .wrapper {
-  overflow: hidden;
-  min-width: 1180px;
+  overflow: hidden; /*чтобы не было горизонтального скролла*/
+  min-width: 1200px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
