Неделя 3. Услуги. Флексы и PP в page-line

--- a/css/blocks/section.css
+++ b/css/blocks/section.css
@@ -2,11 +2,11 @@
   margin-bottom: 128px;
 }
 
-.section__mb_big {
+.section_mb_big {
   margin-bottom: 147px;
 }
 
-.section__mb_small {
+.section_mb_small {
   margin-bottom: 110px;
 }
 
