--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@
 @import url("./blocks/menu.css");
 @import url("./blocks/contacts.css");
 @import url("./blocks/hero.css");
-@import url("./blocks/pageline.css");
+@import url("./blocks/page-line.css");
+@import url("./blocks/page-title.css");
+@import url("./blocks/breadcrumbs.css");
 @import url("./blocks/btn.css");
 @import url("./blocks/section.css");
 @import url("./blocks/offers.css");
