--- a/css/pages/main.css
+++ b/css/pages/main.css
@@ -1,5 +1,5 @@
 .main-page-wrapper {
-  background: url(../../images/bg/lion-header.jpg) center top no-repeat, url(../../images/bg/bottom-pic.png) right bottom 307px no-repeat;
+  background: url(../../images/bg/lion-header.jpg) center top no-repeat, url(../../images/bg/bottom-pic.png) right bottom 289px no-repeat #29292c;
 }
 
 .footer-container__content {
