--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -56,6 +56,11 @@ table { /*чтобы границы ячеек сливались*/
   /*меняет алгоритм расчета ширины и высоты элемента, теперь включает поля и границы, но не отступы*/
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .wrapper {
   overflow: hidden; /*чтобы не было горизонтального скролла*/
   min-width: 1200px;
