--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,6 @@
 @import url("./blocks/menu.css");
 @import url("./blocks/contacts.css");
 @import url("./blocks/hero.css");
-@import url("./blocks/page-line.css");
-@import url("./blocks/page-title.css");
-@import url("./blocks/breadcrumbs.css");
 @import url("./blocks/btn.css");
 @import url("./blocks/section.css");
 @import url("./blocks/offers.css");
@@ -21,3 +18,9 @@
 @import url("./blocks/about.css");
 @import url("./blocks/footer.css");
 @import url("./blocks/socials.css");
+@import url("./blocks/page-line.css");
+@import url("./blocks/page-title.css");
+@import url("./blocks/breadcrumbs.css");
+@import url("./blocks/page-content.css");
+@import url("./blocks/services.css");
+@import url("./blocks/service.css");
