--- a/css/blocks/page-line.css
+++ b/css/blocks/page-line.css
@@ -1,11 +1,9 @@
 .page-line {
   min-height: 415px;
-  background: #202123;
   padding-bottom: 25px;
-  /* margin-bottom: 100px; */
+  margin-bottom: 2px;
   display: flex;
-  /* flex-direction: column; */
-  background: url("../../images/bg/lion-head-wide.jpg") right 20% top no-repeat;
+  background: url("../../images/bg/lion-head-wide.jpg") right 20% top no-repeat #202123;
 } 
 
 .page-line__container {
