--- a/css/blocks/service.css
+++ b/css/blocks/service.css
@@ -15,6 +15,8 @@
 .service__img {
   width: 41%;
   margin-right: 7%;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .service__text-content {
@@ -25,7 +27,8 @@
   color: #202123;
   font-size: 30px;
   font-weight: bold;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
+  max-width: 480px; /*для PP первого тайтла, второй не ложится*/
 }
 
 .service__desc {
