Неделя 3. Партнеры (не PP)

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,5 @@
 @import url("./blocks/page-content.css");
 @import url("./blocks/services.css");
 @import url("./blocks/service.css");
+@import url("./blocks/inner-section.css");
+@import url("./blocks/partners.css");
