Неделя 3. Услуги. Футер

--- a/css/blocks/inner-section.css
+++ b/css/blocks/inner-section.css
@@ -1,7 +1,7 @@
 .inner-section {
   background: #fff;
-  color: #202123;
-  padding: 95px 0;
+  color: #202123;  
+  padding: 83px 0 34px 0;
 }
 
 .inner-section_bg_grey {
