--- a/css/blocks/menu.css
+++ b/css/blocks/menu.css
@@ -1,6 +1,3 @@
-/* .menu {
-  
-} */
 .menu__list {
   display: flex;
   justify-content: space-between;
@@ -25,4 +22,5 @@
 
 .menu__link:hover {
   color: #dfb56d;
+  transition: .3s;
 }
