--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -12,6 +12,7 @@
 .paginator_theme_light .paginator__link:hover {
   color: #fff;
   background: #353538;
+  transition: .3s;
 }
 
 .paginator__display {
@@ -43,4 +44,5 @@
 
 .paginator__link:hover {
   background: #353538;
+  transition: .3s;
 }
