--- a/css/blocks/single-news.css
+++ b/css/blocks/single-news.css
@@ -2,10 +2,10 @@
   position: relative;
   border-radius: 4px;
   overflow: hidden;
+  min-height: 391px;
 }
 
 .single-news__image {
-  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
