Неделя 3. Услуги. Обработка p таким же образом, как и на главной в секции about

--- a/css/blocks/service.css
+++ b/css/blocks/service.css
@@ -37,3 +37,11 @@
   line-height: 1.7;
   margin-bottom: 30px;
 }
+
+.service__desc p {
+  margin-bottom: 20px;
+}
+.service__desc p:last-child {
+  margin-bottom: 0;
+}
+
