--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -36,7 +36,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  line-height: 32px;  /*чтобы размещались по центру блока*/
+  line-height: 2;  /*чтобы размещались по центру блока*/
   border-radius: 50%;
   text-decoration: none;
   font-weight: bold;
