Неделя 4. Отзывы. Немного разметки и css

--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,7 @@
 @import url("./blocks/service.css");
 @import url("./blocks/inner-section.css");
 @import url("./blocks/partners.css");
+@import url("./blocks/banner.css");
+@import url("./blocks/reviews.css");
+@import url("./blocks/review.css");
+@import url("./blocks/review-header.css");
