--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,4 @@
 @import url("./blocks/reviews.css");
 @import url("./blocks/review.css");
 @import url("./blocks/review-header.css");
+@import url("./blocks/review-form.css");
