--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("./layout/base.css");
 
 @import url("./pages/main.css");
+@import url("./pages/welcome.css");
 @import url("./blocks/header.css");
 @import url("./blocks/logo.css");
 @import url("./blocks/menu.css");
@@ -31,3 +32,4 @@
 @import url("./blocks/review.css");
 @import url("./blocks/review-header.css");
 @import url("./blocks/review-form.css");
+@import url("./blocks/welcome-page.css");
