--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,6 @@
 @import url("./blocks/banner.css");
 @import url("./blocks/reviews.css");
 @import url("./blocks/review.css");
-@import url("./blocks/review-header.css");
 @import url("./blocks/review-form.css");
 @import url("./blocks/welcome-page.css");
+@import url("./blocks/avatar.css");
