--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,4 @@
 @import url("./blocks/review-form.css");
 @import url("./blocks/welcome-page.css");
 @import url("./blocks/avatar.css");
+@import url("./blocks/tag.css");
