--- a/css/blocks/review.css
+++ b/css/blocks/review.css
@@ -2,24 +2,30 @@
   max-width: 555px;
   background: #f4f5f5;
   border-radius: 4px;
-  padding: 40px 30px;
+  padding: 45px 30px 36px;
 }
 
 .review__header {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
 }
 
 .review__user {
   text-decoration: none;
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
   font-size: 24px;
   font-weight: bold;
   color: #202123;
   margin-right: 5px;
+  margin-bottom: 15px;
+}
+
+.review__user:after {
+  content: url("../../images/icons/socials/vk-colored.png");
+  height: 30px;
+  margin-left: 7px;
 }
 
 .review__user:hover {
@@ -30,9 +36,11 @@
 
 .review__tags {
   display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
 }
 
-.review__item {
+.review__tag-item {
   margin-right: 10px;
 }
 
@@ -44,7 +52,8 @@
 }
 
 .review__desc {
-  margin-bottom: 50px;
+  line-height: 27px;
+  margin-bottom: 43px;
 }
 
 .review__date {
