--- a/css/blocks/reviews.css
+++ b/css/blocks/reviews.css
@@ -1,17 +1,19 @@
 .reviews {
-  margin-bottom: 85px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   max-height: 1370px;
+  margin-bottom: 45px;
+  margin-top: 40px;
+  column-count: 2;
+  column-gap: 30px; /*отступ между колонками*/
 }
 
 .reviews__item {
-  margin-bottom: 15px;
+  margin-bottom: 24px;
   margin-right: 30px;
 }
 
 .reviews__item:nth-child(2n) {
   margin-right: 0;
 }
-
