--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,4 @@
 @import url("./blocks/welcome-page.css");
 @import url("./blocks/avatar.css");
 @import url("./blocks/tag.css");
+@import url("./blocks/form.css");
