--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -26,3 +26,28 @@
   height: 232px;
   resize: none;
 }
+
+.form__controls {
+  display: flex;
+  margin-bottom: 35px;
+}
+
+.form__controls-title {
+  width: 32%;
+  font-size: 18px;
+  padding-left: 30px;
+  margin-right: 15px;
+}
+
+.form__btns {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form__button {
+  margin-right: 20px;
+}
+
+.form__button:last-child {
+  margin-right: 0;
+}
