--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,4 @@
 @import url("./blocks/avatar.css");
 @import url("./blocks/tag.css");
 @import url("./blocks/form.css");
+@import url("./blocks/controls.css");
