--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -14,6 +14,15 @@
   margin-bottom: 6px;
 }
 
+.contacts__dropdown {
+  position: relative;
+}
+
+.contacts__dropdown:hover .contacts__dropdown-text {
+  top: 24px;
+  opacity: .8;
+}
+
 .contacts__dropdown-title {
   font-size: 13px;
   text-decoration: underline;
@@ -22,4 +31,46 @@
   /*добавила для PP*/
   letter-spacing: 0.04em;
   /*добавила для PP*/
+}
+
+.contacts__dropdown-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 13px;
+  color: #1e1f20;
+  padding: 13px 16px 14px;
+  background: #fff;
+  min-width: 157px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity .3s;
+  position: absolute;
+  top: -9999px;
+  right: 0;
+}
+
+.contacts__dropdown-text:before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 65px;
+  left: 0;
+  width: 100%;
+  height: 12px;
+}
+
+.contacts__dropdown-text:after {
+  content: "";
+  display: flex;
+  border: 10px solid transparent;
+  border-bottom: 10px solid #fff;
+  position: absolute;
+  bottom: 100%;
+  left: 60%;
+}
+
+.contacts__dropdown-workhours {
+  font-weight: bold;
+  margin-bottom: 3px;
 }
