--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -1,6 +1,10 @@
+.form {
+  margin-bottom: 80px;
+}
+
 .form__row {
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 }
 
 .form__input {
@@ -25,18 +29,20 @@
 .form__input_textarea {
   height: 232px;
   resize: none;
+  line-height: 30px;
 }
 
 .form__controls {
   display: flex;
-  margin-bottom: 35px;
+  margin-bottom: 22px;
 }
 
 .form__controls-title {
   width: 32%;
   font-size: 18px;
   padding-left: 30px;
-  margin-right: 15px;
+  margin-right: 9px;
+  line-height: 32px;
 }
 
 .form__btns {
