--- a/css/blocks/inner-section.css
+++ b/css/blocks/inner-section.css
@@ -1,15 +1,23 @@
 .inner-section {
   background: #fff;
   color: #202123;  
-  padding: 83px 0 34px 0;
+  padding: 85px 0 30px 0;
 }
 
 .inner-section_bg_grey {
   background: #f4f5f5;
 }
 
+.inner-section_pt_big {
+  padding: 104px 0 30px 0;
+}
+
 .inner-section__title {
   font-size: 48px;
   font-weight: bold;
-  margin-bottom: 75px;
+  margin-bottom: 80px;
+}
+
+.inner-section__title_mb_small {
+  margin-bottom: 44px;
 }
