--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -22,6 +22,11 @@
   color: #666;
 }
 
+.form__input:focus, .form__button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #e5c288;
+}
+
 .form__input:last-child {
   margin-right: 0;
 }
