Неделя 4. transition на ховеры

--- a/css/blocks/breadcrumbs.css
+++ b/css/blocks/breadcrumbs.css
@@ -26,4 +26,11 @@
 .breadcrumbs__link {
   color: #999;
   font-size: 14px;
+  text-decoration: none;
+  border-bottom: 1px solid #999;
+  transition: .3s;
+}
+
+.breadcrumbs__item:hover .breadcrumbs__link {
+  border-bottom: 1px solid transparent;
 }
