--- a/css/blocks/service.css
+++ b/css/blocks/service.css
@@ -2,16 +2,15 @@
   display: flex;
   padding: 58px 43px;
   text-decoration: none;
+  transition: .3s;
 }
 
 .service:hover {
   background: #f4f5f5;
-  transition: .3s;
 }
 
 .service:hover .service__btn {
   background: #dfb56d;
-  transition: .3s;
 }
 
 .service__img {
@@ -46,3 +45,6 @@
   margin-bottom: 0;
 }
 
+.service__btn {
+  transition: .3s;
+}
