Неделя 4. Header и footer. Убраны лишние сущности, используемые для выравнивания внутренних блочков

--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -3,6 +3,10 @@
   text-align: right;
 }
 
+.contacts_align_right {
+  margin-left: auto;
+}
+
 .contacts__desc {
   color: #999999;
   font-size: 11px;
